admin users registration form changes done

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=pcn_iampapais_db
-DB_USERNAME=pcn_iampapai_usr
-DB_PASSWORD=t3rOzN7CV0wED9l1
+DB_DATABASE=pcn_v2
+DB_USERNAME=pcn_v2_usr
+DB_PASSWORD=hXTGuB1LIkLKJAwP
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,12 +28,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=api.mcq.staging.technowebs.in
+MAIL_HOST=staging.iampapaisarkar.in
 MAIL_PORT=587
-MAIL_USERNAME=support@api.mcq.staging.technowebs.in
-MAIL_PASSWORD=lQ0N7zDDhkVh2KlF
+MAIL_USERNAME=staging@staging.iampapaisarkar.in
+MAIL_PASSWORD=lB3BRx1UeGeR9vUX
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=support@api.mcq.staging.technowebs.in
+MAIL_FROM_ADDRESS=staging@staging.iampapaisarkar.in
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
