pcn registration portal some issues fix

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="PCN Tiered PPMV Portal"
+APP_NAME="PCN Registration Portal"
 APP_ENV=local
 APP_KEY=base64:aqoZZWgp/EbbCmdXwunUwUOvmRwZNLUoEL8iHJqtMH0=
 APP_DEBUG=true
